# prjxray

./: .clang-format  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .style.yapf  .travis.yml  .update-contributing.py  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  LICENSE  Makefile  Makefile.tools_tests  NEWPART.md  README.md  SECURITY.md  UPDATING-THE-DOCS.md  clean.mk  cloudbuild.yaml  download-latest-db.sh  flake.nix  requirements.txt  settings.sh  setup.py
.github/: autolabeler.yml  check_license.sh  check_python_scripts.sh  cloudbuild.yaml  dependabot.yml  update-contributing.py
database/: Makefile  Makefile.database
docs/: .gitignore  Makefile  conf.py  getting.rst  index.rst  introduction.rst  markdown_code_symlinks.py  requirements.txt  xilinx_bitstream.ksy
fuzzers/: .gitignore  Makefile  bram.mk  clb.mk  clb_ext.mk  fuzzer.mk  int_create_empty_db.sh  int_generate.py  int_loop.mk  int_loop.sh  int_loop_check.py  int_maketodo.py  pip_list.mk  pip_loop.mk  piplist.tcl  quick.mk  reseg.sh  run_fuzzer.py
gridinfo/: .gitignore  README  (+5 more)
lib/: CMakeLists.txt  big_endian_span_test.cc  bit_ops_test.cc  database.cc  memory_mapped_file.cc  memory_mapped_file_test.cc  segbits_file_reader.cc  segbits_file_reader_test.cc  xilinx_7series_bitstream_reader.cc  xilinx_7series_bitstream_reader_test.cc  xilinx_7series_configuration_packet.cc  xilinx_7series_configuration_packet_test.cc
lib/include/prjxray/: big_endian_span.h  bit_ops.h  database.h  memory_mapped_file.h  segbits_file_reader.h  xilinx_7series_bitstream_reader.h  xilinx_7series_configuration_packet.h
lib/include/prjxray/xilinx/: architectures.h  bitstream_reader.h  bitstream_writer.h  configuration.h  configuration_packet.h  configuration_packet_with_payload.h  configuration_packetizer.h  configuration_register.h  frames.h  nop_packet.h
lib/include/prjxray/xilinx/spartan6/: bitstream_reader.h  bitstream_writer.h  block_type.h  command.h  configuration.h  configuration_bus.h  configuration_column.h  configuration_options_0_value.h  configuration_packet.h  configuration_packet_with_payload.h  configuration_packetizer.h  configuration_register.h  configuration_row.h  frame_address.h  frames.h  global_clock_region.h  nop_packet.h  part.h  row.h  utils.h
lib/include/prjxray/xilinx/xc7series/: bitstream_reader.h  bitstream_writer.h  block_type.h  command.h  configuration.h  configuration_bus.h  configuration_column.h  configuration_frame_address.h  configuration_frame_range.h  configuration_options_0_value.h  configuration_packet.h  configuration_packet_with_payload.h  configuration_packetizer.h  configuration_register.h  configuration_row.h  crc.h  ecc.h  frame_address.h  frames.h  global_clock_region.h  nop_packet.h  part.h  row.h  utils.h
lib/test_data/: configuration_test.bit  configuration_test.debug.bit  configuration_test.perframecrc.bit  configuration_test.yaml  configuration_test_type_1.bit  one_entry.segbits  one_entry_empty_tag.segbits  one_entry_extra_whitespace.segbits  one_entry_missing_bit.segbits  two_entries.segbits
lib/xilinx/: bitstream_reader.cc  bitstream_writer.cc  configuration.cc  configuration_packet.cc  configuration_packetizer.cc  configuration_register.cc  frames.cc
lib/xilinx/spartan6/: bitstream_reader.cc  bitstream_reader_test.cc  bitstream_writer.cc  bitstream_writer_test.cc  block_type.cc  block_type_test.cc  configuration_bus.cc  configuration_bus_test.cc  configuration_column.cc  configuration_column_test.cc  configuration_packet.cc  configuration_packet_test.cc  configuration_packetizer.cc  configuration_packetizer_test.cc  configuration_register.cc  configuration_row.cc  configuration_test.cc  frame_address.cc  frame_address_test.cc  frames.cc  frames_test.cc  global_clock_region.cc  global_clock_region_test.cc  part.cc  part_test.cc  row.cc  row_test.cc  utils.cc
lib/xilinx/tests/spartan6/: bitstream_reader_test.cc  bitstream_writer_test.cc  block_type_test.cc  configuration_bus_test.cc  configuration_column_test.cc  configuration_packet_test.cc  configuration_test.cc  frame_address_test.cc  frames_test.cc  global_clock_region_test.cc  part_test.cc  row_test.cc
lib/xilinx/tests/xc7series/: bitstream_reader_test.cc  bitstream_writer_test.cc  block_type_test.cc  configuration_bus_test.cc  configuration_column_test.cc  configuration_packet_test.cc  configuration_packetizer_test.cc  configuration_test.cc  crc_test.cc  ecc_test.cc  frame_address_test.cc  frames_test.cc  global_clock_region_test.cc  part_test.cc  row_test.cc
lib/xilinx/xc7series/: bitstream_reader.cc  bitstream_reader_test.cc  bitstream_writer.cc  bitstream_writer_test.cc  block_type.cc  block_type_test.cc  configuration_bus.cc  configuration_column.cc  configuration_column_test.cc  configuration_frame_address.cc  configuration_frame_address_test.cc  configuration_frame_range.cc  configuration_packet.cc  configuration_packet_test.cc  configuration_packetizer.cc  configuration_packetizer_test.cc  configuration_register.cc  configuration_row.cc  configuration_test.cc  crc_test.cc  ecc.cc  ecc_test.cc  frame_address.cc  frame_address_test.cc  frames.cc  frames_test.cc  global_clock_region.cc  global_clock_region_test.cc  part.cc  part_test.cc  row.cc  row_test.cc  utils.cc
tools/: .gitignore  CMakeLists.txt  Makefile  bitread.cc  bittool.cc  fasm2frame.py  frame_address_decoder.cc  gen_part_base_yaml.cc  quick_test.py  segmatch.cc  segprint2fasm.py  simpleroute.py  sp6bitread.cc  sp6frames2bit.cc  sp6patch.cc  test_fasm2frame.py  test_segprint2fasm.py  verify_tile_connections.py  xc7CMakeLists.txt  xc7bitread.cc  xc7frames2bit.cc  xc7gen_part_base_yaml.cc  xc7patch.cc
tools/bits2rbt/: configuration_packets.h  ecc.h  header.cc  header.h  xc7CMakeLists.txt  xc7bits2rbt.cc  xc7configuration_packets.cc  xc7crc.h  xc7ecc.cc  xc7header.cc
tools/test_data/: ff_int.fasm  ff_int_op1.fasm  lut.fasm  lut_int.fasm
tools/test_data/clb_ff/: design.bits  design.segp
tools/test_data/clb_lut/: design.segp  top.v
tools/test_data/lut_int/: .gitignore
(+1793 files in other folders)
